--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -7,15 +7,21 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.6",
     "@types/validator": "^13.11.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
     "@dcl/crypto": "^3.4.3",
     "@dcl/schemas": "^9.8.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "validator": "^13.11.0"
   }
 }
